--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.6",
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "jquery": "^3.7.1",
     "keen-slider": "^6.8.6",
     "owl.carousel": "^2.3.4",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
